@@ -12,7 +12,7 @@ import pl.ib.beauty.model.dto.VideoDtoResponse;
 import pl.ib.beauty.repository.VideoRepository;
 import software.amazon.awssdk.core.sync.RequestBody;
 import software.amazon.awssdk.services.s3.S3Client;
-import software.amazon.awssdk.services.s3.model.GetObjectRequest;
+import software.amazon.awssdk.services.s3.model.DeleteObjectRequest;
 import software.amazon.awssdk.services.s3.model.PutObjectRequest;
 import software.amazon.awssdk.services.s3.presigner.S3Presigner;
 import software.amazon.awssdk.services.s3.presigner.model.GetObjectPresignRequest;
@@ -22,11 +22,11 @@ import java.time.Duration;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class VideoService {
+    public static final String BEAUTY_APPLICATION_VIDEO = "beautyapplicationvideo";
     private final VideoRepository videoRepository;
     private final S3Presigner s3Presigner;
     private final S3Client s3Client;
@@ -36,16 +36,12 @@ public class VideoService {
         List<Video> videos = videoRepository.findByCourseId(courseId);
 
         return videos.stream().map(video -> {
-            // Tworzymy request do S3
-            GetObjectRequest getObjectRequest = GetObjectRequest.builder()
-                    .bucket("beautyapplicationvideo") // 🔒 nazwa bucketu
-                    .key(video.getPath())             // klucz pliku w S3
-                    .build();
 
-            // Tworzymy pre-signed URL ważny 10 min
             GetObjectPresignRequest presignRequest = GetObjectPresignRequest.builder()
                     .signatureDuration(Duration.ofMinutes(10))
-                    .getObjectRequest(getObjectRequest)
+                    .getObjectRequest(req-> req
+                            .bucket(BEAUTY_APPLICATION_VIDEO)
+                            .key(video.getPath()))
                     .build();
 
             PresignedGetObjectRequest presignedRequest = s3Presigner.presignGetObject(presignRequest);
@@ -56,7 +52,7 @@ public class VideoService {
                     .description(video.getDescription())
                     .id(video.getId())
                     .build();
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     @SneakyThrows
@@ -73,7 +69,7 @@ public class VideoService {
 
         // 2. Wygeneruj pre-signed URL (PUT) do wrzucenia pliku na S3
         PutObjectRequest putObjectRequest = PutObjectRequest.builder()
-                .bucket("beautyapplicationvideo")
+                .bucket(BEAUTY_APPLICATION_VIDEO)
                 .key(key)
                 .build();
 
@@ -92,5 +88,16 @@ public class VideoService {
         Video video = optionalVideo.orElseThrow(() -> new EntityNotFoundException("Video with id: " + videoId + " not found"));
         video.setDescription(description);
         videoRepository.save(video);
+    }
+
+    public void deleteVideo(Long videoId) {
+        Optional<Video> optionalVideo = videoRepository.findById(videoId);
+        Video video = optionalVideo.orElseThrow(() -> new EntityNotFoundException("Video with id: " + videoId + " not found"));
+        String path = video.getPath();
+        s3Client.deleteObject(DeleteObjectRequest.builder().
+                bucket(BEAUTY_APPLICATION_VIDEO)
+                .key(path)
+                .build());
+        videoRepository.delete(video);
     }
 }
